# Tarea2GPU

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
libs/: stb_image.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
scripts/: simplifyBunnyData.py
src/: Bunny.h  Camera.h  CenteredCamera.h  Cube.h  FPSCamera.h  Figure.h  Lamp.h  Light.h  Model.h  Shader.h  Texture.h  main.cpp  objloader.h  playground.cpp
src/Camera/: CenteredCamera.h  FPSCamera.h
src/Core/: Shader.h  Texture.h
src/Models/: Bunny.h  Cube.h  Lamp.h  ModelImporter.h  Piramid.h  Sphere.h  Tetrahedron.h
src/shaders/: brightShader.frag  fragment.frag  normalMapping.frag  normalMapping.vert  phong.frag  phong.vert  toon.frag  toon.vert
